--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="heading">
-        <h1>Rock Paper Scissor</h1>
+        <h1>ROCK PAPER SCISSOR</h1>
       </div>
       <div class="img-container">
         <div class="box1">
