--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rock-Paper-Scissor</title>
+    <link rel="icon" href="img/title-img.jpg">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
